2010-12-10  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=46573
        <rdar://problem/8479389> REGRESSION: charset="utf-8" (with quotes) doesn't work

        * http/tests/mime/quoted-charset-expected.txt: Added.
        * http/tests/mime/quoted-charset.php: Added.
2010-12-10  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=46573
        <rdar://problem/8479389> REGRESSION: charset="utf-8" (with quotes) doesn't work

        Test: http/tests/mime/quoted-charset.php

        * platform/network/cf/ResourceResponseCFNet.cpp: (WebCore::ResourceResponse::platformLazyInit):
        * platform/network/mac/ResourceResponseMac.mm: (WebCore::ResourceResponse::platformLazyInit):
        Work around a CFNetwork issue, strip quotes if they are present.

Canonical link: https://commits.webkit.org/64202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73836 268f45cc-cd09-0410-ab3c-d52691b4dbfc